# md-DuelShim

./: .gitmodules  CMakeLists.txt
include/: shims.h
launcher/: main.c
shimGen/: build.gradle  functions.txt  shims.c
shimGen/src/main/java/: ShimGen.java
src/: library.c  shims.c
